--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>My Website</title>
+    </head>
+    <body>
+        <header>
+            <h1>Thiago Ferreira</h1>
+        </header>
+        <nav>
+            <a>One</a>
+            <a>Two</a>
+            <a>Three</a>
+            <a>Social Media</a>
+        </nav>
+        <section>
+            <h2>Favorite Foods</h2><br>
+            <ul>
+                <li>Pizza</li>
+                <li>Hamburger</li>
+                <li>Spaghetti</li>
+                <li>Ice Cream</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Achievements</h2><br>
+            Progress in this course (100%)<meter min="0" max="100" value="100">50%</meter><br>
+            Progress in the Specialization capstone (20%)<meter min="0" max="100" value="20">20%</meter><br>
+            Progress in life goals (10%)<meter min="0" max="100" value="10">10%</meter><br>
+        </section>
+        <section>
+
+        </section>
+        <footer>
+
+        </footer>
+    </body>
+</html>
