--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a>Social Media</a>
         </nav>
         <section>
-            <h2>Favorite Foods</h2><br>
+            <h2>Favorite Foods</h2>
             <ul>
                 <li>Pizza</li>
                 <li>Hamburger</li>
@@ -24,7 +24,7 @@
             </ul>
         </section>
         <section>
-            <h2>Achievements</h2><br>
+            <h2>Achievements</h2>
             Progress in this course (100%)<meter min="0" max="100" value="100">50%</meter><br>
             Progress in the Specialization capstone (20%)<meter min="0" max="100" value="20">20%</meter><br>
             Progress in life goals (10%)<meter min="0" max="100" value="10">10%</meter><br>
