--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             <h1>Thiago Ferreira</h1>
         </header>
         <nav>
-            <a>One</a>
-            <a>Two</a>
-            <a>Three</a>
-            <a>Social Media</a>
+            <a href="">One</a>
+            <a href="">Two</a>
+            <a href="">Three</a>
+            <a href="">Social Media</a>
         </nav>
         <section>
             <h2>Favorite Foods</h2>
@@ -25,15 +25,21 @@
         </section>
         <section>
             <h2>Achievements</h2>
-            Progress in this course (100%)<meter min="0" max="100" value="100">50%</meter><br>
-            Progress in the Specialization capstone (20%)<meter min="0" max="100" value="20">20%</meter><br>
-            Progress in life goals (10%)<meter min="0" max="100" value="10">10%</meter><br>
+            Progress in this course (100%) <progress value="100" max="100"> 100% </progress><br>
+            Progress in the Specialization capstone (20%) <progress value="20" max="100"> 100% </progress><br>
+            Progress in life goals (10%) <progress value="10" max="100"> 100% </progress><br>
         </section>
         <section>
-
+            <h2>More about me</h2>
+            <details>
+                <summary>My Childhood</summary>
+                <p>I was born in Brazil, in a city called Juiz de Fora. One of my dreams is moving to the United States some day and have a big family.</p>
+            </details>
         </section>
         <footer>
-
+            <img src="newlogo.png">
+            This page was created by Thiago & Colleen van Lent. To learn more about web design, visit
+            <a href="http://www.intro-webdesign.com">Intro to Web Design</a>.
         </footer>
     </body>
 </html>
